deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: mycontainer
        image: polavarapusiva/k8project:appimage
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi" 
            cpu: "500m"

        #liveness probe
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 5  

        #readiness probe
        readinessProbe:
          httpGet:    
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
