app-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bankapp-service
spec:
  selector:
    app: bankapp
  type: ClusterIP
  ports:
   - protocol: TCP
     port: 80
     targetPort: 80
