db-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bankdb-service
spec:
  selector:
    app: bankdb
  clusterIP: None
  ports:
   - protocol: TCP
     port: 3306 
     targetPort: 3306
