netpol.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-from-frontend
spec:
  podSelector:
    matchLabels:
      app: myapp
  
  policyTypes:
  - Ingress
  - Egress


  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-bankapp
      podSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-bankapp
        ports:
        - protocol: TCP
          port: 80  


  egress:
  - to:
    - podSelector:
        matchLabels:
          app: bankdb
      ports:
      - protocol: TCP
        port: 3306

  -to:
    - podSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      ports:
      - protocol: UDP
        port: 53
